Because the generated-keystore scripted test uses "run"...
...we have to use --add-exports via env variable (or via scriptedLaunchOpts)